# genflux-python-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  example.py  llms-full.txt  llms.txt  mypy.ini  pyproject.toml  ruff.toml  test_quickstart.py  test_setup.py
.cursor/rules/: docs-autogen.mdc  genflux-sdk.mdc  python-style.mdc
.githooks/: README.md  commit-msg  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docs-check.yml  notify-platform-docs-update.yml  publish.yml
docs/: API_REFERENCE.md  BACKEND_API_REFERENCE.md  DEVELOPER_API_REFERENCE.md  EXAMPLES.md  LOCAL_SETUP.md  QUICKSTART.md  WORKFLOW.md
docs/evaluation/: EVALUATION_METRICS.md
examples/: config_example.py  quickstart.py  simple_demo.py  test_config_client.py
scripts/: generate_api_reference.py  generate_llms_txt.py  setup-git-hooks.sh
src/genflux/: __init__.py  client.py  configs.py  constants.py  evaluation.py  exceptions.py  jobs.py  models.py  progress.py
src/genflux/clients/: __init__.py  base.py  config.py  reports.py
src/genflux/exceptions/: __init__.py  api.py
src/genflux/models/: __init__.py  config.py  job.py  report.py  usage.py
tests/: test_backward_compatibility.py  test_config_client.py  test_health_check.py  test_quick_evaluation.py  test_sdk_simple.py  test_usage_models.py
tools/gitleaks/: gitleaks.sh  gitleaks.toml
