[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "genflux"
version = "0.1.0"
description = "Python SDK for GenFlux API - RAG Evaluation Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tqdm>=4.66.0",
]
authors = [{ name = "GenFlux Team" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/genflux"]

[tool.hatch.build.targets.sdist]
include = ["src/genflux"]

[dependency-groups]
dev = [
    "build>=1.2.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "ruff>=0.11.4",
    "twine>=6.0.0",
]

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "src/experimental", "src/typestubs", ".venv"]
