[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "genflux"
version = "0.1.2"
description = "Python SDK for GENFLUX API - RAG Evaluation Platform"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tqdm>=4.66.0",
]
authors = [{ name = "GENFLUX Team", email = "genflux-support@elith.jp" }]
keywords = ["rag", "evaluation", "llm", "ai-safety", "redteam", "policy-check", "genflux"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://www.platform.genflux.jp/"
Repository = "https://github.com/elith-co-jp/genflux-python-sdk"
Changelog = "https://github.com/elith-co-jp/genflux-python-sdk/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/elith-co-jp/genflux-python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/genflux"]

[tool.hatch.build.targets.sdist]
include = ["src/genflux"]

[dependency-groups]
dev = [
    "build>=1.2.0",
    "openai>=1.0.0",
    "pip-audit>=2.7.0",
    "pip-licenses>=4.4.0",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.0.0",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "ruff>=0.11.4",
    "twine>=6.0.0",
]

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "src/experimental", "src/typestubs", ".venv"]
